--- a/src/index.html
+++ b/src/index.html
@@ -6,6 +6,11 @@
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <style>
+    .highlight:not(.djs-connection) .djs-visual > :nth-child(1) {
+      fill: #61ce618a !important; /* color elements as green */
+    }
+  </style>
 </head>
 <body>
   <app-root></app-root>
