--- a/src/index.html
+++ b/src/index.html
@@ -10,6 +10,12 @@
     .highlight:not(.djs-connection) .djs-visual > :nth-child(1) {
       fill: #61ce618a !important; /* color elements as green */
     }
+
+    .customUploadCSS > :nth-child(1) {
+      position: relative;
+      overflow: hidden;
+      width: 100%;
+    }
   </style>
 </head>
 <body>
